Mon Dec  2 17:23:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* variable.c (rb_mod_constants): when calling Module#constants with
	  inherit=false, there is no need to use a hashtable to deduplicate
	  constant names. [Feature #9196] [ruby-core:58786]

Mon Dec  2 14:16:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/net/smtp.rb (Net::SMTP#critical):  Always return a
	  Net::SMTP::Response.  Patch by Pawel Veselov.
	  [ruby-trunk - Bug #9125]
	* test/net/smtp/test_smtp.rb:  Test for the above.

Mon Dec  2 05:52:33 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master baa965b.  Notable changes:

	  Copy directories to lib/ when installing extensions.  This completes
	  the fix for [ruby-trunk - Bug #9106]

	* test/rubygems:  ditto.

Mon Dec  2 02:03:47 2013  Shota Fukumori  <her@sorah.jp>

	* test/ruby/test_case.rb (test_nomethoderror):
	  Add test related to r43913, r43914

Mon Dec  2 00:53:01 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (getenv): use ANSI codepage version of getenv() for miniruby
	  on Windows.
	  [ruby-core:58732] [Bug #9189] reported by phasis68 (Heesob Park).

Sun Dec  1 22:14:27 2013  Zachary Scott  <e@zzak.io>

	* doc/contributors.rdoc: [DOC] Import contributors from redmine wiki
	  Many wiki pages have become outdated and spam-ridden, we will import
	  these to trunk and begin maintaining them in ruby-trunk. This will
	  also allow new contributors to easily contribute patches to update
	  these pages, where previously a redmine account with wiki access was
	  required. Another bonus is having a contributors file to show thanks
	  to all of the people who have submitted a patch to Ruby.

Sun Dec  1 18:03:26 2013  Zachary Scott  <e@zzak.io>

	* doc/maintainers.rdoc: [DOC] Current maintainers of Ruby

Sun Dec  1 17:17:36 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Current branch maintainers

Sun Dec  1 17:16:36 2013  Zachary Scott  <e@zzak.io>
