@@ -1,3 +1,10 @@
+Mon Dec  2 21:49:19 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* hash.c (rb_hash_rehash): make temporary st_table under the control
+	  of GC. [Bug #9187]
+
+	* test/ruby/test_hash.rb: add a test for above.
+
 Mon Dec  2 17:23:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
 
 	* variable.c (rb_mod_constants): when calling Module#constants with
